--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -63,7 +63,7 @@ form .field-group {
 }
 
 form input, form select {
-  background-color: #f0f0f5;
+  background-color: var(--background-input-color);
   border: 0;
   padding: 16px 24px;
   font-size: 16px;
@@ -100,5 +100,43 @@ form button {
 }
 
 form button:hover {
-  background-color: #2fb86e;
+  background-color: #2fb85e;
+}
+
+.items-grid {
+  display: grid; /*para separar em linhas e colunas*/
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 16px; /*para espaçamento*/
+}
+
+.items-grid li{
+  background-color: #f5f5f5;
+  list-style: none;
+  border: 2px solid #f5f5f5;
+  border-radius: 8px;
+  height: 180px;
+  padding: 32px 24px 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  cursor: pointer;
+}
+
+.items-grid li span {
+  margin-top: 12px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  color: var(--title-color);
+}
+
+.items-grid li.selected { /*quando o campo da lista estiver selecionado*/
+  background: #e1faec;
+  border: 2px solid #34cb79;
+}
+
+.items-grid li img, .items-grid li span { /*para impedir de clicar na imagem ou span*/
+  pointer-events: none;
 }
