--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 :root {
   --title-color: #322153;
   --primary-color: #34cb79;
+  --background-input-color: #f0f0f5
 }
 
 * {
@@ -14,7 +15,7 @@ html {
 }
 
 body {
-  background: #f0f0f5;
+  background: var(--background-input-color);
   -webkit-font-smoothing: antialiased;
 }
 
