Configurando database e nunjucks

--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -1,11 +1,16 @@
+body {
+  background-color: white;
+}
+
 body::after { /*Criando um pseudo elemento css para a faixa branca*/
   content: ""; /*colocando um conteúdo vazio*/
-  position: fixed;
-  background: white;
-  top: 260px;
+  position: absolute;
+  background: #f0f0f5;
+  top: 0;
   right: 0;
   left: 0;
   bottom: 0;
+  height: 16rem;
   z-index: -1; /*faixa branca fica atrás de todos os elementos no eixo Z*/
 }
 
