--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -74,3 +74,15 @@
 #modal form button:hover {
   background-color: #2fb85e;
 }
+
+/* Estilo para o modal de cadastro concluído (point-created) */
+#modal.point .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#modal.point h1 {
+  color: white;
+  margin-top: 32px;
+}
