--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -1,18 +1,23 @@
 {% extends "layout.html" %}
 
+
 {% set pageId = "page-create-point" %}
+
 
 {% block title %} {#altera o titulo padrão da página para esse#}
   <title>Criar um ponto de coleta</title>
 {% endblock title %}
 
+
 {% block styles %} {#Referenciando conteúdo no block styles para ser usado no layout.html#}
   <link rel="stylesheet" href="/styles/create-point.css">
+  <link rel="stylesheet" href="/styles/modal.css">
 {% endblock styles %}
+
 
 {% block content %}
   {% include "partials/page-header.html" %} <!--Para incluir um html que se repete pelo nunjucks-->
-  <form action="">
+  <form action="/savepoint" method="POST"> {#alterando o método http e passand a rota para pegar dados do formulario no frontend#}
 
     <h1>Cadastro de ponto de coleta</h1>
 
@@ -66,32 +71,32 @@
       </legend>
 
       <div class="items-grid"> <!--Campos de Itens de coleta-->
-        <li data-id="1">
+        <li data-id="Lâmpadas">
           <img src="/assets/lampadas.svg" alt="lampadas">
           <span>Lâmpadas</span>
         </li>
 
-        <li data-id="2">
+        <li data-id="Pilhas e Baterias">
           <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
           <span>Pilhas e Baterias</span>
         </li>
 
-        <li data-id="3">
+        <li data-id="Papéis e Papelão">
           <img src="/assets/papeis-papelao.svg" alt="Papéis e Papelão">
           <span>Papéis e Papelão</span>
         </li>
 
-        <li data-id="4">
+        <li data-id="Resíduos Eletrônicos">
           <img src="/assets/eletronicos.svg" alt="Resíduos Eletrônicos">
           <span>Resíduos Eletrônicos</span>
         </li>
 
-        <li data-id="5">
+        <li data-id="Resíduos Orgânicos">
           <img src="/assets/organicos.svg" alt="Resíduos Orgânicos">
           <span>Resíduos Orgânicos</span>
         </li>
 
-        <li data-id="6">
+        <li data-id="Óleo de Cozinha">
           <img src="/assets/oleo.svg" alt="Óleo de Cozinha">
         <span>Óleo de Cozinha</span>
         </li>
@@ -105,6 +110,14 @@
 
   </form>
 {% endblock content %}
+
+
+{% block modal %}
+  {% if saved %} {#se o formulario for salvo eu renderizo a página de cadastro concluído#}
+    {%include "partials/point-created.html"%}
+  {% endif %}
+{% endblock modal %}
+
 
 {% block scripts %}
   <script src="/scripts/create-point.js"></script>
