--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -11,35 +11,36 @@
 {% endblock styles %}
 
 {% block content %}
-  {% include "partials/page-header.html" %} <!--Para incluir um html que se repete pelo nunjucks-->
+  {% include "partials/page-header.html" %} {#Para incluir um html que se repete pelo nunjucks#}
   <main>
+
+  {% if total > 0 %} {#caso não tenha pontos de coleta cadastrados#}
     <h4>
-      <strong>2 pontos</strong> encontrados
+      <strong>{{ total }} pontos</strong> encontrados
     </h4>
 
     <div class="cards">
       
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1528323273322-d81458248d40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1101&q=80" alt="Colectoria">
-        <h1>Colectoria</h1>
-        <h3>Resíduos Eletrônicos, Lâmpadas</h3>
-        <p>
-          Rio do Sul, Santa Catarina <br/>
-          Guilherme Gemballa, Jardim América <br/>
-          Nº 260
-        </p>
-      </div>
+      {% for place in places %} {#Laço de repetição no nunjucks#}
+        {#Passando os dados do banco para o html pelo nunjucks#}
+        <div class="card">
+          <img src="{{ place.image }}" alt="{{ place.name }}">
+          <h1>{{ place.name }}</h1>
+          <h3>{{ place.items }}</h3>
+          <p>
+            {{ place.city }}, {{ place.state }} <br/>
+            {{ place.address }} <br/>
+            {{ place.address2 }}
+          </p>
+        </div>
+      {% endfor %}
 
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1567393528677-d6adae7d4a0a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Papersider">
-        <h1>Papersider</h1>
-        <h3>Papéis e Papelão</h3>
-        <p>
-          Rio do Sul, Santa Catarina <br/>
-          Guilherme Gemballa, Jardim América <br/>
-          Nº 260
-        </p>
-      </div>
     </div>
+
+    {%else%}
+      <h4><strong>Nenhum</strong> local encontrado</h4>
+
+  {% endif %}
+
   </main>
 {% endblock content %}
